basic crud on elections
